pablo rompiendo mi pagina

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p><strong>¿Que esperas aprender?</strong></p>
   <p>Espero saber como manejarme perfectamente por el entorno de desarollo de paginas web y poder hacer una página web con facilidad.</p>
   <p><strong>¿Dónde te gustaría trabajar?</strong></p>
-  <p>No tengo claro de que me gustaría trabajar, pero si que me gustaría hacer una página web.</p>
+  <p>No tengo claro de que me gustukgvyukfgkjhbvukvkgvaría trabajar, pero si que me gustaría hacer una página web.</p>
   
 </body>
 </html>
